--- a/src/components/MainHeader/Navigation.module.css
+++ b/src/components/MainHeader/Navigation.module.css
@@ -1,34 +1,12 @@
-.nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-
-.nav li {
-  margin: 0;
-  margin-left: 2rem;
-}
-
-.nav a {
-  text-decoration: none;
-  color: white;
-}
-
-.nav a:hover,
-.nav a:active {
-  color: #f3cafb;
-}
-
 .nav button {
   font: inherit;
-  background: #dd0db0;
-  border: 1px solid #dd0db0;
+  background: #dd860d;
+  border: 1px solid #dd860d;
   padding: 0.5rem 1.5rem;
+  margin-right: 1.0rem;
   color: white;
   cursor: pointer;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.26);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.75);
   border-radius: 20px;
 }
 
@@ -38,6 +16,12 @@
 
 .nav button:hover,
 .nav button:active {
-  color: #f3cafb;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.26);
+  color: #f9f8f7;
+  background: #ff6e6c;
+  border: 1px solid #f9f8f7;  
+  box-shadow: 0 2px 10px rgba(242, 237, 237, 0.867);
+}
+
+.btncontainer {
+  display: flex;
 }
