--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,7 +1,17 @@
 .home {
-  width: 90%;
-  max-width: 40rem;
-  padding: 3rem;
-  margin: 2rem auto;
+  position: fixed;  
+  top: 17rem;
+  /*center the container */
+  left: 50%;
+  transform: translate(-50%, 0);
+  height: 6rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: -10rem;
+  background-color: #383838;
+  color: black;
+  border-radius: 14px;
+  padding: 1rem;
   text-align: center;
 }
