--- a/src/components/Auth/Login.module.css
+++ b/src/components/Auth/Login.module.css
@@ -9,9 +9,30 @@
   text-align: center;
 }
 
+.nav button {
+  font: inherit;
+  background: #dd860d;
+  border: 1px solid #dd860d;
+  padding: 0.5rem 1.5rem;
+  margin-right: 1.0rem;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.75);
+  border-radius: 20px;
+}
+
+.nav button:focus {
+  outline: none;
+}
+
+.nav button:hover,
+.nav button:active {
+  color: #f9f8f7;
+  background: #ff6e6c;
+  border: 1px solid #f9f8f7;  
+  box-shadow: 0 2px 10px rgba(242, 237, 237, 0.867);
+}
+
 .btncontainer {
   display: flex;
-  margin: auto;
-  width: 60%;
-  padding: 10px;
 }
