--- a/src/components/UI/Spinner/Spinner.module.css
+++ b/src/components/UI/Spinner/Spinner.module.css
@@ -1,6 +1,6 @@
-.spinner{
-    height: "100vh";
-    display: "flex";
-    align-items: "center";
-    justify-content: "center"    
+.spinner {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
