--- a/src/components/Home/DashBoard.module.css
+++ b/src/components/Home/DashBoard.module.css
@@ -16,6 +16,13 @@
   text-align: center;
 }
 
+.main {
+  margin: 3rem auto;
+  width: 90%;
+  height: 50%;
+  max-width: 40rem;
+}
+
 .header {
   width: 100%;
   height: 5rem;
