centering toolbar and content p2

--- a/src/components/Home/DashBoard.module.css
+++ b/src/components/Home/DashBoard.module.css
@@ -16,11 +16,10 @@
   text-align: center;
 }
 
-.main {
+.content {
   margin: 3rem auto;
-  width: 100%;
-  max-width: 90rem;
-  height: 25rem;
+  width: 89%;
+  height: 30rem;
   display: flex;
   align-items: center;
   background-color: #252525;  
