--- a/src/components/entities/Equipments/Equipment.module.css
+++ b/src/components/entities/Equipments/Equipment.module.css
@@ -1,4 +1,4 @@
-/* Add Record */
+/* Add / Update Form */
 input[type="text"],
 input[type="email"],
 input[type="number"],
@@ -84,4 +84,29 @@ input[type="submit"]:hover {
 .btn-view {
     background-color: #e7e7e7;
     color: black;
+}
+
+/* Detail Record */
+.card{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    border: 1px red solid;
+    align-content: center;
+    margin: 0 auto;
+}
+
+.card-header{
+    height: 30%;
+    background: #5d6770;
+    color: white;
+    text-align: center;
+}
+
+.card-header p{
+    font-size: 20px;
+}
+
+.container {
+    padding: 4px 16px;
 }
