--- a/src/components/entities/Cruds.module.css
+++ b/src/components/entities/Cruds.module.css
@@ -73,6 +73,10 @@ input[type="submit"]:hover {
     cursor: pointer;
 }
 
+.btn-new {
+    background-color: #4caf50;
+}
+
 .btn_edit {
     background-color: #008cba;
 }
