--- a/src/components/entities/Cruds.module.css
+++ b/src/components/entities/Cruds.module.css
@@ -26,6 +26,22 @@ input[type="submit"]{
 input[type="submit"]:hover {
     background-color: #45a049;
 }
+/* navbar */
+.navbar {
+    display: flex;
+    flex-direction: row;
+}
+
+.navbar-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 30px;
+    color: inherit;
+    text-decoration: inherit;
+    text-transform: uppercase;
+    outline: none;
+}
 
 /* View Records */
 .styled_table {
