--- a/src/components/entities/Cruds.module.css
+++ b/src/components/entities/Cruds.module.css
@@ -132,3 +132,7 @@ input[type="submit"]:hover {
 }
 
 /* crud header and display table */
+.flexbox-container {
+    display: flex;
+    flex-direction: row-reverse;
+}
