addings tags for title and button elements

--- a/src/components/entities/Cruds.module.css
+++ b/src/components/entities/Cruds.module.css
@@ -134,5 +134,12 @@ input[type="submit"]:hover {
 /* crud header and display table */
 .flexbox-container {
     display: flex;
+}
+
+.flexbox-container-title{
+    align-items: center;
+}
+
+.flexbox-container-button {
     flex-direction: row-reverse;
 }
