updating flex tags for the header

--- a/src/components/entities/Cruds.module.css
+++ b/src/components/entities/Cruds.module.css
@@ -132,14 +132,11 @@ input[type="submit"]:hover {
 }
 
 /* crud header and display table */
-.flexbox-container {
+.flexbox_container {
     display: flex;
-}
-
-.flexbox-container-title{
     align-items: center;
 }
 
-.flexbox-container-button {
+.flexbox_container_button {
     flex-direction: row-reverse;
 }
