--- a/src/components/entities/Cruds.module.css
+++ b/src/components/entities/Cruds.module.css
@@ -1,3 +1,9 @@
+/* container for React Components from Dashboard */
+.component_container{
+    /* float: center; */
+    display: block;
+}
+
 /* Add / Update Form */
 input[type="text"],
 input[type="email"],
@@ -43,37 +49,26 @@ input[type="submit"]:hover {
     outline: none;
 }
 
-/* View Records */
-.styled_table {
-    border-collapse: collapse;
+/* main container for crud title and controls */
+.flexbox_main_container {
+    /* background-color: #4caf50; */
+    position: relative;
+    width: 875px;
+    height: 60px;
+    transform: translate(50%, 175%);
+}
+
+/* container para new button and search criteria */
+.flexbox_crud_controls {
+    /* background-color: coral; */
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     margin: auto;
-    font-size: 0.9em;
-    font-family: sans-serif;
-    max-width: 1300px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
-
-.styled_table thead tr {
-    background-color: #009879;
-    color: #ffffff;
-    text-align: left;
-}
-
-.styled_table th,
-.styled_table td {
-    padding: 12px 15px;
-}
-
-.styled_table tbody tr {
-    border-bottom: 1px solid #dddddd;
-}
-
-.styled_table tbody tr:nth-of-type(even){
-    background-color: #f3f3f3;
-}
-
-.styled_table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+    height: 40px;
+    text-align: center;
 }
 
 .crud_title {
@@ -82,6 +77,7 @@ input[type="submit"]:hover {
     font-weight: bold;
 }
 
+/* action buttons */
 .btn {
     border: none;
     color: white;
@@ -118,6 +114,39 @@ input[type="submit"]:hover {
     background-color: orange;
 }
 
+/* View Records */
+.styled_table {
+    border-collapse: collapse;
+    margin: auto;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    max-width: 1300px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.styled_table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled_table th,
+.styled_table td {
+    padding: 12px 15px;
+}
+
+.styled_table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled_table tbody tr:nth-of-type(even){
+    background-color: #f3f3f3;
+}
+
+.styled_table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+
 /* Detail Record */
 .card{
     width: 30%;
@@ -141,28 +170,5 @@ input[type="submit"]:hover {
 
 .container {
     padding: 4px 16px;
-}
-
-/* main container for crud title and controls */
-.flexbox_main_container {
-    background-color: #4caf50;
-    position: relative;
-    width: 875px;
-    height: 50px;
-    transform: translate(50%, 175%);
-}
-
-/* container para new button and search criteria */
-.flexbox_crud_controls {
-    background-color: coral;
-    /* position: absolute;
-    left: 0%;
-    top: 100%;
-    width: 600px;
-    height: 50px; */
-    position: absolute;    
-    display: block;
-    justify-content: top;
-    align-items: center;
 }
 
