--- a/src/components/MainFooter/Footer.module.css
+++ b/src/components/MainFooter/Footer.module.css
@@ -1,6 +1,6 @@
 .main-footer {
     position: fixed;
-    top: 250;
+    bottom: 0;
     left: 0;
     width: 98%;
     height: 5rem;
@@ -11,6 +11,6 @@
     padding: 0 2rem;
   }
   
-  .main-header h3 {
+  .main-footer h3 {
     color: white;
   }
